reduced the background position of intro-movie style to 0% to reveal more of the background image. Also added a background image to episode imaged, border and box-shadow to the same. Again, fixed the overflow of the flex images to auto

--- a/src/components/intro-movie-detail/intro-movie-detail.styles.scss
+++ b/src/components/intro-movie-detail/intro-movie-detail.styles.scss
@@ -8,7 +8,7 @@
   // min-height: 80vh;
   padding: 1rem 0;
   position: relative;
-  background-position: 50% 45%;
+  background-position: 50% 0%;
   background-size: cover;
 
   @media all and (max-width: 768px) {
