--- a/src/components/season-episode-card/season-episode-card.styles.scss
+++ b/src/components/season-episode-card/season-episode-card.styles.scss
@@ -252,7 +252,7 @@
         grid-auto-flow: column;
         grid-auto-columns: 200px;
         grid-gap: 0.5rem;
-        overflow: scroll hidden;
+        overflow: auto;
         margin-top: 0.5rem;
         padding: 0.5rem 0;
 
@@ -261,6 +261,11 @@
           min-height: 90px;
           margin-right: 0.5rem;
           padding: 0;
+          border: $shadowBoxBorder;
+          box-shadow: $shadowBox;
+          background: $blankImagecontainer;
+          border-radius: 5px;
+          overflow: hidden;
 
           .images-container-img {
             width: 100%;
